--- a/css/style.css
+++ b/css/style.css
@@ -614,7 +614,7 @@ footer {
     }
 
     .work-section {
-        background: url(../images/Earth-mobile.png),
+        background: url(../images/Earth\ 1.png),
             #0B0E16;
         background-size: 100%;
         background-repeat: no-repeat;
