bg color change

--- a/css/style.css
+++ b/css/style.css
@@ -490,7 +490,7 @@ footer {
 }
 
 .card {
-    background-color: #0B0E16 !important;
+    background-color: #151B2B !important;
     border-radius: 4px !important;
     -webkit-border-radius: 4px !important;
     -moz-border-radius: 4px !important;
